fix popup issue on mobile

--- a/src/less/app/notify.less
+++ b/src/less/app/notify.less
@@ -29,7 +29,7 @@
 // ========================================================================
 
 @notify-position:                               50px;
-@notify-z-index:                                1040;
+@notify-z-index:                                1051;
 @notify-width:                                  360px;
 
 @notify-message-margin-bottom:                  10px;
