--- a/src/less/components/keywords/keyword-manage.less
+++ b/src/less/components/keywords/keyword-manage.less
@@ -306,6 +306,10 @@
                     display: inline;
                     text-align: right;
                 }
+                @media only screen and (max-width: @pad-m-width) {
+                    right: 0;
+                    bottom: 2px;
+                }
             }
             .force-promotion {
                 display: relative;
